# pastebin-rs

./: README.md
pastebin-server/: Cargo.toml
pastebin-server/src/: main.rs
